[package]
name = "first_program_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.0"
tokio = {version = "1.2", features = ["full"]}
tower = "0.4.13"
serde = {version = "1.0.197", features = ["derive", "serde_derive"]}
serde_json = "1.0.116"
thiserror = "1.0.58"
sqlx = {version = "0.7.4", features = ["postgres","migrate","runtime-tokio-rustls"]}
tracing = { version = "0.1.40", features = ["async-await"]}