[package]
name = "first_program_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = "0.7.0"
tokio = {version = "1.2", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["trace", "full"]}
serde = {version = "1.0.197", features = ["derive", "serde_derive"]}
serde_json = "1.0.116"
thiserror = "1.0.58"
sqlx = {version = "0.7.4", features = ["postgres","migrate","runtime-tokio-rustls"]}
tracing = { version = "0.1.40", features = ["async-await"]}
clap = {version = "4.5.4", features = ["derive", "env", "unicode","wrap_help","cargo"]}
knock-knock-yew = {git = "https://github.com/pdx-cs-rust/knock-knock-yew.git"}